fix commit and home pages responsivenes on mobile

--- a/src/components/layouts/header/header.css
+++ b/src/components/layouts/header/header.css
@@ -47,21 +47,25 @@
   font-size: 1.25rem;
 }
 
-@media screen and (max-width: 460px){
+@media screen and (max-width: 520px){
   .header-wrapper{
     display: flex;
     flex-wrap: wrap;
   }
   .description-title{
-    font-size: 2.5rem;
-  }
-}
-
-@media screen and (max-width: 490px){
-  .description-title{
-    font-size: 2.5rem;
+    font-size: 1.5rem;
   }
   .description-paragraph{
-    font-size: .8rem;
+    font-size: 1rem;
+    padding: 1.5rem;
+  }
+  .navigation{
+    padding: 1.3rem;
+  }
+}
+@media screen and (max-width: 410px){
+  .header-wrapper{
+    display: flex;
+    flex-wrap: wrap;
   }
 }
