--- a/src/components/layouts/search/search.css
+++ b/src/components/layouts/search/search.css
@@ -119,4 +119,7 @@
   .search-wrapper input {
     width: 200px;
   }
+  .suggested-repo{
+    padding: .8rem 1rem;
+  }
 }
